Switch to Megaparsec

--- a/ros2-haskell-tools.cabal
+++ b/ros2-haskell-tools.cabal
@@ -11,13 +11,13 @@ common warnings
 
 library ros2
     exposed-modules: Ros2.PackageParser, Ros2.Graph
-    build-depends: base, parsec, text, containers
+    build-depends: base, megaparsec, text, containers
     hs-source-dirs: src
 
 executable parser
     import:           warnings
     main-is:          Parser.hs
-    build-depends:    base, parsec, text, pretty-simple, cmdargs
+    build-depends:    base, megaparsec, text, pretty-simple, cmdargs
     other-modules:    Ros2.PackageParser
     hs-source-dirs:   src
     default-language: Haskell2010
@@ -25,7 +25,7 @@ executable parser
 executable depcheck
     import:           warnings
     main-is:          DepCheck.hs
-    build-depends:    base, parsec, text, pretty-simple, cmdargs, containers, directory, dir-traverse
+    build-depends:    base, megaparsec, text, pretty-simple, cmdargs, containers, directory, dir-traverse
     other-modules:    Ros2.PackageParser, Ros2.Graph
     hs-source-dirs:   src
     default-language: Haskell2010
