--- a/ros2-haskell-tools.cabal
+++ b/ros2-haskell-tools.cabal
@@ -23,22 +23,43 @@ library ros2
                    http-conduit,
                    bytestring
     hs-source-dirs: src
-
-executable parser
-    import:           warnings
-    main-is:          Parser.hs
-    build-depends:    base,
-                      megaparsec,
-                      text,
-                      pretty-simple,
-                      cmdargs
-    other-modules:    Ros2.PackageParser
-    hs-source-dirs:   src
     default-language: Haskell2010
 
-executable depcheck
+-- executable parser
+--     import:           warnings
+--     main-is:          Parser.hs
+--     build-depends:    base,
+--                       megaparsec,
+--                       text,
+--                       pretty-simple,
+--                       cmdargs
+--     other-modules:    Ros2.PackageParser
+--     hs-source-dirs:   src
+--     default-language: Haskell2010
+--
+-- executable depcheck
+--     import:           warnings
+--     main-is:          DepCheck.hs
+--     build-depends:    base,
+--                       megaparsec,
+--                       text,
+--                       pretty-simple,
+--                       cmdargs,
+--                       containers,
+--                       directory,
+--                       dir-traverse,
+--                       http-client,
+--                       http-conduit,
+--                       bytestring
+--     other-modules:    Ros2.PackageParser,
+--                       Ros2.IndexParser,
+--                       Ros2.Graph
+--     hs-source-dirs:   src
+--     default-language: Haskell2010
+
+executable rostool
     import:           warnings
-    main-is:          DepCheck.hs
+    main-is:          Main.hs
     build-depends:    base,
                       megaparsec,
                       text,
@@ -52,6 +73,9 @@ executable depcheck
                       bytestring
     other-modules:    Ros2.PackageParser,
                       Ros2.IndexParser,
-                      Ros2.Graph
+                      Ros2.PrettyError,
+                      Ros2.Graph,
+                      DepCheck,
+                      Parser
     hs-source-dirs:   src
     default-language: Haskell2010
